@@ -43,10 +43,10 @@ RM = /usr/bin/cmake -E remove -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /home/andy/src/zank/source
+CMAKE_SOURCE_DIR = /home/andy/src/Zank/source
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /home/andy/src/zank/build
+CMAKE_BINARY_DIR = /home/andy/src/Zank/build
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -73,9 +73,9 @@ rebuild_cache/fast: rebuild_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/andy/src/zank/build/CMakeFiles /home/andy/src/zank/build/CMakeFiles/progress.marks
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/andy/src/Zank/build/CMakeFiles /home/andy/src/Zank/build/CMakeFiles/progress.marks
 	$(MAKE) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/andy/src/zank/build/CMakeFiles 0
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/andy/src/Zank/build/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
